erDiagram
    USER ||--o{ USER_SEGMENT : belongs_to
    USER ||--o{ USER_ACTION : performs
    USER ||--o{ SUBSCRIPTION : has
    USER ||--o{ USER_ATTRIBUTE : has
    USER {
        string user_id PK
        string email
        datetime created_at
        datetime last_active
    }
    
    USER_SEGMENT {
        string segment_id PK
        string name "VIP, Loyal, New, etc."
        string description
    }
    
    USER_ATTRIBUTE {
        string attribute_id PK
        string user_id FK
        string key "name, product, etc."
        string value
    }
    
    SUBSCRIPTION {
        string subscription_id PK
        string user_id FK
        string endpoint
        string auth_key
        string p256dh_key
        bool is_active
    }
    
    USER_ACTION {
        string action_id PK
        string user_id FK
        string action_type "cart_abandoned, login, etc."
        datetime timestamp
        json metadata
    }
    
    TEMPLATE ||--o{ CAMPAIGN : used_by
    TEMPLATE {
        string template_id PK
        string name
        string content
        json variables
    }
    
    CAMPAIGN ||--o{ NOTIFICATION : sends
    CAMPAIGN ||--o{ SEGMENT_CONDITION : targets
    CAMPAIGN ||--o{ TRIGGER : uses
    CAMPAIGN {
        string campaign_id PK
        string name
        string template_id FK
        datetime scheduled_at
        string status "draft, scheduled, sent"
    }
    
    SEGMENT_CONDITION {
        string condition_id PK
        string campaign_id FK
        string segment_id FK
    }
    
    TRIGGER {
        string trigger_id PK
        string campaign_id FK
        string action_type FK
        string delay "24h, etc."
    }
    
    NOTIFICATION {
        string notification_id PK
        string campaign_id FK
        string user_id FK
        string status "delivered, failed, etc."
        datetime sent_at
        datetime opened_at
        datetime clicked_at
    }
    
    A_B_TEST {
        string test_id PK
        string campaign_id FK
        string variant_a
        string variant_b
        datetime started_at
        datetime ended_at
        string winning_variant
    }
    
    WEBHOOK {
        string webhook_id PK
        string url
        string event_type
        bool is_active
    }
    
    ANALYTICS {
        string report_id PK
        string campaign_id FK
        int total_sent
        int total_delivered
        int total_opened
        int total_clicked
        float ctr
        float conversion_rate
        datetime generated_at
    }
    
    CDP_INTEGRATION {
        string integration_id PK
        string name
        string config
        datetime last_sync
    }
    
    CEP_INTEGRATION {
        string integration_id PK
        string name
        string channel "email, sms, etc."
        string config
    }